criação de perfil e testes de tabelas

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </p>
     <h1>Músicas</h1>
     <h2>Gêneros musicais</h2>
+    <!--<ul> cria listas com pontos-->
     <ul>
         <li>Rock</li>
         <li>Funk</li>
@@ -38,6 +39,7 @@
         <li>Forró</li>
     </ul>
     <h2>Bandas mais ouvidas</h2>
+    <!--<ol> cria listas numeradas-->
     <ol>
         <li>Ozzy</li>
         <li>César MC</li>
@@ -47,6 +49,21 @@
         <li>Sérgio Reis</li>
         <li>Falamansa</li>
     </ol>
+    <!--<table> cria tabelas em paralelo-->
+    <table>
+        <tr>
+            <th>Primeiro nome</th>
+            <th>Ultimo nome</th>
+        </tr>
+        <tr>
+            <td>Lucas</td>
+            <td>Sousa</td>
+        </tr>
+        <tr>
+            <td>Alice</td>
+            <td>Sousa</td>
+        </tr>
+    </table>
 
 </body>
 
