--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -14,7 +14,6 @@
         <h1>
             <i lang="pt-BR">olá mundo</i>
             <i><em>olá mundo</em></i>
-            <br><br>
             <i>olá <strong>mundo</strong></i>
         </h1>
         <h2>
