atualização tag section

--- a/index-da-aula/index-aula2.html
+++ b/index-da-aula/index-aula2.html
@@ -16,15 +16,23 @@ devemos apenas ter uma unica vez dentro da nossa páginas.-->
 
     </header>
 
+    <footer>
+
+    </footer>
+
     <main>
         <!-- todo meu conteudo principal deve esta aqui, semanticamente falando este é o padrão correto a ser usasdo-->
 
 
     </main>
 
-    <footer>
+    <section>
+        <!--serve para definir uma sessão da nossa página html.
+        todos os atributos globais vão funcionar e tem um display box
+    primeiro devemos ver a precisão para o uso da tag section-->
+    </section>
 
-    </footer>
+
 </body>
 
 </html>
