atualização tag section EX:

--- a/index-da-aula/index-aula2.html
+++ b/index-da-aula/index-aula2.html
@@ -30,6 +30,25 @@ devemos apenas ter uma unica vez dentro da nossa páginas.-->
         <!--serve para definir uma sessão da nossa página html.
         todos os atributos globais vão funcionar e tem um display box
     primeiro devemos ver a precisão para o uso da tag section-->
+        <!--Ex:
+    <section>
+      <h2>Heading</h2>
+      <p>Bunch of awesome content</p>
+    </section>-->
+        <!--
+    <section>
+      <a href="#">Previous article</a>
+      <a href="#">Next article</a>
+    </section>-->
+
+        <!--
+    <section>
+      <button class="reply">Reply</button>
+      <button class="reply-all">Reply to all</button>
+      <button class="fwd">Forward</button>
+      <button class="del">Delete</button>
+</section>
+    -->
     </section>
 
 
