--- a/index-da-aula/index-aula2.html
+++ b/index-da-aula/index-aula2.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <!--tag main = nesta tag não devemos ter nenhum conteudo repitido como barras laterais
-    links de navegação, logotipos e etc...é a tag principal do nosso arquivo html, facilitando a busca do usuário
-devemos apenas ter uma unica vez dentro da nossa páginas.-->
+
     <header>
 
     </header>
@@ -22,7 +20,9 @@ devemos apenas ter uma unica vez dentro da nossa páginas.-->
 
     <main>
         <!-- todo meu conteudo principal deve esta aqui, semanticamente falando este é o padrão correto a ser usasdo-->
-
+        <!--tag main = nesta tag não devemos ter nenhum conteudo repitido como barras laterais
+        links de navegação, logotipos e etc...é a tag principal do nosso arquivo html, facilitando a busca do usuário
+        devemos apenas ter uma unica vez dentro da nossa páginas.-->
 
     </main>
 
@@ -50,6 +50,9 @@ devemos apenas ter uma unica vez dentro da nossa páginas.-->
 </section>
     -->
     </section>
+    <article>
+        <!--usada para criar artigos e separar seu conteudo-->
+    </article>
 
 
 </body>
